--- a/requirements.txt
+++ b/requirements.txt
@@ -17,6 +17,8 @@ tensorboard>=2.14.0
 tqdm>=4.66.0
 pyyaml>=6.0
 omegaconf>=2.3.0
+pytorch_lightning>=2.0.0
+nltk>=3.8.0
 
 # Evaluation
 editdistance>=0.6.0
